--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -22,5 +22,5 @@
     <input matInput type="password" formControlName="password" required>
   </mat-form-field>
 
-  <app-navbar-button class="submit-button" mat-raised-button color="primary" type="submit" disabled="!registerForm.valid">{{ "registerYou" | translate }}</app-navbar-button>
+  <app-button class="submit-button" mat-raised-button color="primary" type="submit" disabled="!registerForm.valid">{{ "registerYou" | translate }}</app-button>
 </form>
