--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar-container">
-  <div class="left-side">
+  <div class="left-side" routerLink="">
     <img src="assets/logo_merkat.png" alt="Logo" style="width: 120px;"/>
   </div>
 
@@ -8,14 +8,14 @@
 
   <div class="collapsible-menu" [class.collapsed]="isNavbarCollapsed">
     <div class="left-buttons">
-      <app-navbar-button *ngFor="let button of navbarButtons" [text]="button.text" [routerLink]="button.routerLink" (click)="closeNavbar()"></app-navbar-button>
+      <app-button *ngFor="let button of navbarButtons" [text]="button.text" [routerLink]="button.routerLink" (click)="closeNavbar()"></app-button>
     </div>
 
     <div class="right-side">
       <app-language-selector></app-language-selector>
       <div class="right-buttons">
-      <app-navbar-button [text]="textLogin" [routerLink]='linkLogin' (click)="closeNavbar()"></app-navbar-button>
-      <app-navbar-button [text]="textRegister" [routerLink]='linkRegister' (click)="closeNavbar()"></app-navbar-button>
+      <app-button [text]="textLogin" [routerLink]='linkLogin' (click)="closeNavbar()"></app-button>
+      <app-button [text]="textRegister" [routerLink]='linkRegister' (click)="closeNavbar()"></app-button>
       </div>
     </div>
   </div>
