--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -43,6 +43,7 @@
   left: 0;
   width: 100%;
   padding: 0 1rem;
+  padding-left: 0;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 100;
   overflow: hidden; /* Hide content when collapsed */
@@ -57,6 +58,7 @@
   max-height: fit-content; /* Adjust based on content height */
   opacity: 1; /* Fade in */
   padding: 1rem 1rem;
+  padding-left: 0;
   transition: max-height 0.4s ease, opacity 0.4s ease, padding 0.4s ease; /* Smooth expand/collapse */
 }
 
