--- a/src/app/components/oglas-detalji/oglas-detalji.component.html
+++ b/src/app/components/oglas-detalji/oglas-detalji.component.html
@@ -1,21 +1,39 @@
-
-<div class="oglas-detalji">
+<div style="background-color: #f1f1f1;">
+    <hr>
+  </div>
+  <div class="oglas-header">
+    <app-button class="back-button">{{ "back" | translate }}</app-button>
+    <h1 class="oglas-name">{{ oglas.naziv }}</h1>
+  </div>
+  
+  <div class="oglas-detalji">
     <img class="oglas-image" [src]="oglas.slika" alt="{{ oglas.naziv }}" />
   
-    <h1 class="oglas-name">{{ oglas.naziv }}</h1>
-  
-    <h2 class="oglas-title">Opis</h2>
+    <h2 class="oglas-title">{{ "description" | translate }}</h2>
     <p class="oglas-description">{{ oglas.opis }}</p>
   
     <p class="oglas-price">
-      <strong>Cijena:</strong> {{ oglas.cijena }}
+      <strong>{{"price" | translate}}:</strong> {{ oglas.cijena }}
     </p>
   
     <p class="oglas-categories">
-      <strong>Kategorije: </strong>
+      <strong>{{"categories" | translate}}: </strong>
       <span class="oglas-category" *ngFor="let kategorija of oglas.kategorije">
         <app-button [text]="kategorija"></app-button>
       </span>
     </p>
+  
+    <!-- User info card -->
+    <strong>{{"publisher" | translate}}: </strong>
+    <div class="user-card">
+      <img class="user-image" [src]="user.slika" alt="{{ user.username }}" />
+      <div class="user-info">
+        <p class="user-name">{{ user.username }}</p>
+        <div class="user-actions">
+          <app-button class="user-action-button">{{"call" | translate}}</app-button>
+          <app-button class="user-action-button">{{"sendMessage" | translate}}</app-button>
+        </div>
+      </div>
+    </div>
   </div>
   
