--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,12 +1,17 @@
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
   <mat-form-field class="form-field" appearance="outline"> 
     <mat-label>{{ "firstName" | translate }}</mat-label>
-    <input matInput type="text" formControlName="firstName" required>
+    <input matInput type="text" formControlName="user_name" required>
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline"> 
     <mat-label>{{ "lastName" | translate }}</mat-label>
-    <input matInput type="text" formControlName="lastName" required>
+    <input matInput type="text" formControlName="user_surname" required>
+  </mat-form-field>
+
+  <mat-form-field class="form-field" appearance="outline"> 
+    <mat-label>Korisničko ime:</mat-label>
+    <input matInput type="text" formControlName="username" required>
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline"> 
@@ -18,9 +23,19 @@
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline"> 
+    <mat-label>Broj telefona: </mat-label>
+    <input matInput type="text" formControlName="tel_num" required>
+    <mat-error *ngIf="registerForm.get('tel_number')?.hasError('pattern')">
+      Invalid phone number format
+    </mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="form-field" appearance="outline"> 
     <mat-label>{{ "password" | translate }}</mat-label>
     <input matInput type="password" formControlName="password" required>
   </mat-form-field>
 
-  <app-button class="submit-button" mat-raised-button color="primary" type="submit" disabled="!registerForm.valid">{{ "registerYou" | translate }}</app-button>
-</form>
+  <button mat-raised-button color="primary" type="submit" [disabled]="!registerForm.valid">
+    {{ "registerYou" | translate }}
+  </button>
+  </form>
