--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -10,7 +10,7 @@
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline"> 
-    <mat-label>Korisničko ime:</mat-label>
+    <mat-label>{{"username" | translate}}</mat-label>
     <input matInput type="text" formControlName="username" required>
   </mat-form-field>
 
@@ -23,10 +23,10 @@
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline"> 
-    <mat-label>Broj telefona: </mat-label>
+    <mat-label>{{"tel-num" | translate}} </mat-label>
     <input matInput type="text" formControlName="tel_num" required>
     <mat-error *ngIf="registerForm.get('tel_number')?.hasError('pattern')">
-      Invalid phone number format
+      {{ "telNumError" | translate }}
     </mat-error>
   </mat-form-field>
 
