--- a/frontend/src/app/components/register/register.component.scss
+++ b/frontend/src/app/components/register/register.component.scss
@@ -1,6 +1,8 @@
-input{
-color: black !important; /* Или нека друга боја */
+input {
+  color: black !important;
+  /* Или нека друга боја */
 }
+
 .register-form {
   display: flex;
   flex-direction: column;
@@ -13,21 +15,29 @@ color: black !important; /* Или нека друга боја */
     max-width: 400px; // Ensure form fields are mobile-friendly
   }
 
-  .submit-button {
+
+  button {
     width: 100%;
+    height: 3rem;
+    font-style: bold;
+    font-size: 1.25rem;
     max-width: 400px; // Button aligns with form field width
-    padding: 0.75rem;
-    font-size: 1rem;
+    padding: 0.5rem;
     font-weight: bold;
-    text-transform: uppercase;
-  }
-  ::ng-deep app-button button {
-      width: 100%;
-      height: 4rem;
-      font-style: bold;
-      font-size: 1.25rem;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
   }
 }
+
+
+form button:hover {
+  background-color: #0056b3;
+}
+
 
 // Larger screens
 @media (min-width: 768px) {
@@ -38,6 +48,9 @@ color: black !important; /* Или нека друга боја */
     .form-field,
     .submit-button {
       max-width: 500px; // Adjust width for larger screens
+    }
+    button{
+      max-width: 500px;
     }
   }
 }
