--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,17 +1,14 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
-    <mat-form-field class="form-field" appearance="outline"> 
-      <mat-label>{{ "email" | translate }}</mat-label>
-      <input matInput type="email" formControlName="email" required>
-      <mat-error *ngIf="loginForm.get('email')?.hasError('email')">
-        {{ "emailError" | translate }}
-      </mat-error>
-    </mat-form-field>
-  
-    <mat-form-field class="form-field" appearance="outline"> 
-      <mat-label>{{ "password" | translate }}</mat-label>
-      <input matInput type="password" formControlName="password" required>
-    </mat-form-field>
-  
-    <app-button class="submit-button" mat-raised-button color="primary" type="submit" disabled="!loginForm.valid">{{ "login" | translate }}</app-button>
-  </form>
-  
+  <mat-form-field class="form-field" appearance="outline">
+    <mat-label>{{ "username" | translate }}</mat-label>
+    <input matInput type="text" formControlName="username" required>
+  </mat-form-field>
+
+  <mat-form-field class="form-field" appearance="outline">
+    <mat-label>{{ "password" | translate }}</mat-label>
+    <input matInput type="password" formControlName="password" required>
+  </mat-form-field>
+
+  <button class="submit-button" mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">
+    {{ "login" | translate }}</button>
+</form>
