--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -19,15 +19,27 @@ input{
         padding: 0.75rem;
         font-size: 1rem;
         font-weight: bold;
-        text-transform: uppercase;
       }
-      ::ng-deep app-button button {
-          width: 100%;
-          height: 4rem;
-          font-style: bold;
-          font-size: 1.25rem;
+      button {
+        width: 100%;
+        height: 3rem;
+        font-style: bold;
+        font-size: 1.25rem;
+        max-width: 400px; // Button aligns with form field width
+        padding: 0.5rem;
+        font-weight: bold;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
       }
     }
+    form button:hover {
+      background-color: #0056b3;
+    }
+    
     
     // Larger screens
     @media (min-width: 768px) {
@@ -39,6 +51,9 @@ input{
         .submit-button {
           max-width: 500px; // Adjust width for larger screens
         }
+      }
+      button{
+        max-width: 500px;
       }
     }
     
