--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar-container">
   <div class="left-side" routerLink="">
-    <img src="assets/logo_merkat.png" alt="Logo" style="width: 120px;"/>
+    <img src="assets/logo_merkat.png" alt="Logo" style="width: 120px;" />
   </div>
 
   <!-- Hamburger menu for mobile -->
@@ -8,14 +8,19 @@
 
   <div class="collapsible-menu" [class.collapsed]="isNavbarCollapsed">
     <div class="left-buttons">
-      <app-button *ngFor="let button of navbarButtons" [text]="button.text" [routerLink]="button.routerLink" (click)="closeNavbar()"></app-button>
+      <app-button *ngFor="let button of navbarButtons" [text]="button.text" [routerLink]="button.routerLink"
+        (click)="closeNavbar()"></app-button>
     </div>
 
     <div class="right-side">
       <app-language-selector></app-language-selector>
-      <div class="right-buttons">
-      <app-button [text]="textLogin" [routerLink]='linkLogin' (click)="closeNavbar()"></app-button>
-      <app-button [text]="textRegister" [routerLink]='linkRegister' (click)="closeNavbar()"></app-button>
+      <div class="right-buttons" *ngIf="!(isLoggedIn)">
+        <app-button [text]="textLogin" [routerLink]="linkLogin" (click)="closeNavbar()"></app-button>
+        <app-button [text]="textRegister" [routerLink]="linkRegister" (click)="closeNavbar()"></app-button>
+      </div>
+      <div class="user-menu right-buttons" *ngIf="isLoggedIn">
+        <app-button class="menu-item" routerLink="/user" (click)="closeNavbar()">My Profile</app-button>
+        <app-button class="menu-item" (click)="logout()">Logout</app-button>
       </div>
     </div>
   </div>
