--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,13 @@
-<header>
-  <app-navbar></app-navbar>
-</header>
-<router-outlet></router-outlet>
+<body>
+  
+  <header>
+    <app-navbar></app-navbar>
+  </header>
+
+  <router-outlet></router-outlet>
+
+  <footer>
+    <app-footer></app-footer>
+  </footer>
+
+</body>
