--- a/frontend/src/app/components/oglas-detalji/oglas-detalji.component.html
+++ b/frontend/src/app/components/oglas-detalji/oglas-detalji.component.html
@@ -25,12 +25,12 @@
   
     <!-- User info card -->
     <strong>{{"publisher" | translate}}: </strong>
-    <div class="user-card" >
+    <div class="user-card" [routerLink]="['/user']">
       <img class="user-image" [src]="user.slika" alt="{{ user.username }}" />
       <div class="user-info">
         <p class="user-name">{{ user.username }}</p>
         <div class="user-actions">
-          <app-button class="user-action-button" routerLink="../messages">{{"call" | translate}}</app-button>
+          <app-button class="user-action-button">{{"call" | translate}}</app-button>
           <app-button class="user-action-button">{{"sendMessage" | translate}}</app-button>
         </div>
       </div>
