footer i poruke prevod popravljeni

--- a/frontend/src/app/components/oglas-detalji/oglas-detalji.component.html
+++ b/frontend/src/app/components/oglas-detalji/oglas-detalji.component.html
@@ -30,8 +30,8 @@
       <div class="user-info">
         <p class="user-name">{{ user.username }}</p>
         <div class="user-actions">
-          <app-button class="user-action-button" routerLink="../messages">{{"call" | translate}}</app-button>
-          <app-button class="user-action-button">{{"sendMessage" | translate}}</app-button>
+          <app-button class="user-action-button" >{{"call" | translate}}</app-button>
+          <app-button class="user-action-button" routerLink="/messages">{{"sendMessage" | translate}}</app-button>
         </div>
       </div>
     </div>
