--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
         </ul>
       </div>
       <div class="copyright">
-        <p>&copy; 2024 Merkat. Сва права задржана.</p>
+        <p>{{"copyRight" | translate}}</p>
       </div>
     </div>
   </footer>
