--- a/frontend/src/app/components/messages/messages.component.html
+++ b/frontend/src/app/components/messages/messages.component.html
@@ -13,9 +13,9 @@
 
   <div class="input-area">
     <mat-form-field class="input-area"> 
-      <mat-label>Нова порука</mat-label>
+      <mat-label>{{"newMessage" | translate}}</mat-label>
       <input matInput type="text" [(ngModel)]="newMessage">
     </mat-form-field>
-    <button mat-raised-button color="primary" (click)="sendMessage()">Пошаљи</button>
+    <button mat-raised-button color="primary" (click)="sendMessage()">{{"send" | translate}}</button>
   </div>
 </div>
