--- a/frontend/src/app/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/components/user-profile/user-profile.component.html
@@ -64,38 +64,39 @@
             </div>
           
             <mat-form-field class="form-field" appearance="outline">
-              <mat-label>Ime</mat-label>
+              <mat-label>{{ "firstName" | translate }}</mat-label>
               <input matInput type="text" formControlName="ime" />
             </mat-form-field>
           
             <mat-form-field class="form-field" appearance="outline">
-              <mat-label>Prezime</mat-label>
+              <mat-label>{{ "lastName" | translate }}</mat-label>
               <input matInput type="text" formControlName="prezime" />
             </mat-form-field>
           
             <mat-form-field class="form-field" appearance="outline">
-              <mat-label>Username</mat-label>
+              <mat-label>{{ "username" | translate }}</mat-label>
               <input matInput type="text" formControlName="username" />
-            </mat-form-field>
-          
-            <mat-form-field class="form-field" appearance="outline">
-              <mat-label>Email</mat-label>
-              <input matInput type="email" formControlName="email" />
-              <mat-error *ngIf="userForm.get('email')?.hasError('email')">
-                Please enter a valid email address.
+              <mat-error *ngIf="userForm.get('username')?.hasError('required')">
+                {{ "usernameRequired" | translate }}
+              </mat-error>
+              <mat-error *ngIf="userForm.get('username')?.hasError('usernameExists')">
+                {{ "usernameError" | translate }}
               </mat-error>
             </mat-form-field>
           
             <mat-form-field class="form-field" appearance="outline">
-              <mat-label>Broj telefona</mat-label>
-              <input matInput type="text" formControlName="telefon" />
+              <mat-label>{{ "email" | translate }}</mat-label>
+              <input matInput type="email" formControlName="email" />
+              <mat-error *ngIf="userForm.get('email')?.hasError('email')">
+                {{ "emailError" | translate }}
+              </mat-error>
             </mat-form-field>
-            
+          
             <mat-form-field class="form-field" appearance="outline">
-              <mat-label>Password</mat-label>
-              <input matInput type="password" formControlName="password" required />
-              <mat-error *ngIf="userForm.get('password')?.hasError('required')">
-                Password is required.
+              <mat-label>{{"tel-num" | translate}}</mat-label>
+              <input matInput type="text" formControlName="telefon" />
+              <mat-error *ngIf="userForm.get('tel_number')?.hasError('pattern')">
+                {{ "telNumError" | translate }}
               </mat-error>
             </mat-form-field>
           
