--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -2,18 +2,24 @@
   <mat-form-field class="form-field" appearance="outline">
     <mat-label>{{ "firstName" | translate }}</mat-label>
     <input matInput type="text" formControlName="user_name" required>
+    <mat-error *ngIf="registerForm.get('user_name')?.hasError('required')">
+      {{ "fieldRequired" | translate }}
+    </mat-error>
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline">
     <mat-label>{{ "lastName" | translate }}</mat-label>
     <input matInput type="text" formControlName="user_surname" required>
+    <mat-error *ngIf="registerForm.get('user_surname')?.hasError('required')">
+      {{ "fieldRequired" | translate }}
+    </mat-error>
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline">
     <mat-label>{{ "username" | translate }}</mat-label>
     <input matInput type="text" formControlName="username" required>
     <mat-error *ngIf="registerForm.get('username')?.hasError('required')">
-      {{ "usernameRequired" | translate }}
+      {{ "fieldRequired" | translate }}
     </mat-error>
     <mat-error *ngIf="registerForm.get('username')?.hasError('usernameExists')">
       {{ "usernameError" | translate }}
@@ -23,22 +29,31 @@
   <mat-form-field class="form-field" appearance="outline">
     <mat-label>{{ "email" | translate }}</mat-label>
     <input matInput type="email" formControlName="email" required>
+    <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
+      {{ "fieldRequired" | translate }}
+    </mat-error>
     <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
-      {{ "emailError" | translate }}
+      {{ "Invalid email address" | translate }}
     </mat-error>
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline">
-    <mat-label>{{"tel-num" | translate}} </mat-label>
+    <mat-label>{{ "tel-num" | translate }}</mat-label>
     <input matInput type="text" formControlName="tel_num" required>
-    <mat-error *ngIf="registerForm.get('tel_number')?.hasError('pattern')">
-      {{ "telNumError" | translate }}
+    <mat-error *ngIf="registerForm.get('tel_num')?.hasError('required')">
+      {{ "fieldRequired" | translate }}
+    </mat-error>
+    <mat-error *ngIf="registerForm.get('tel_num')?.hasError('pattern')">
+      {{ "Please enter a valid phone number" | translate }}
     </mat-error>
   </mat-form-field>
 
   <mat-form-field class="form-field" appearance="outline">
     <mat-label>{{ "password" | translate }}</mat-label>
     <input matInput type="password" formControlName="password" required>
+    <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+      {{ "fieldRequired" | translate }}
+    </mat-error>
   </mat-form-field>
 
   <button mat-raised-button color="primary" type="submit" [disabled]="!registerForm.valid">
