--- a/frontend/src/app/components/add-listing/add-listing.component.scss
+++ b/frontend/src/app/components/add-listing/add-listing.component.scss
@@ -2,33 +2,37 @@
     padding: 1rem;
     max-width: 600px;
     margin: auto;
-  }
-  
-  h1 {
+}
+
+mat-form-field {
+    height: fit-content !important;
+}
+
+h1 {
     text-align: center;
-  }
-  
-  .form-group {
+}
+
+.form-group {
     margin-bottom: 1rem;
-  }
-  
-  label {
+}
+
+label {
     display: block;
     margin-bottom: 0.5rem;
     font-weight: bold;
-  }
-  
-  input,
-  textarea,
-  select {
+}
+
+input,
+textarea,
+select {
     width: 100%;
     padding: 0.5rem;
     font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
-  }
-  
-  button {
+}
+
+button {
     display: block;
     width: 100%;
     padding: 0.75rem;
@@ -38,26 +42,25 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-  }
-  
-  button:disabled {
+}
+
+button:disabled {
     background-color: #ccc;
     cursor: not-allowed;
-  }
-  
-  @media (max-width: 768px) {
+}
+
+@media (max-width: 768px) {
     .create-listing {
-      padding: 0.5rem;
+        padding: 0.5rem;
     }
-  
+
     input,
     textarea,
     select {
-      font-size: 0.9rem;
+        font-size: 0.9rem;
     }
-  
+
     button {
-      font-size: 0.9rem;
+        font-size: 0.9rem;
     }
-  }
-  
+}
